fix horizontal scrolling

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -13,7 +13,7 @@
     height: 120px;
     object-fit: cover;
     background-position: center;
-    margin: 0;
+    margin-right: 30px;
 }
 
 .profile__info {
